--- a/account-notifications.html
+++ b/account-notifications.html
@@ -679,7 +679,7 @@
                                                     ><input
                                                       aria-labelledby="undefinedEMAIL-row-title"
                                                       id="undefinedEMAIL-row-checkbox"
-                                                      class="_1yf4i4f"
+                                                      class="form__check-input"
                                                       type="checkbox" /><span
                                                       class="_41yoza"
                                                       data-checkbox="true"
@@ -1467,7 +1467,7 @@
                                                         ><input
                                                           type="checkbox"
                                                           id="undefinedEMAIL-row-checkbox"
-                                                          class="_1yf4i4f" /><span
+                                                          class="form__check-input" /><span
                                                           class="_41yoza"
                                                           data-checkbox="true"
                                                         ></span
@@ -2402,7 +2402,7 @@
                             aria-describedby="HOST_RECOGNITION_ACHIEVEMENTSEMAIL-row-subtitle"
                             role="switch"
                             type="button"
-                            class="_1x8lx0do"
+                            class="form__switch--checked"
                           >
                             <div class="_16g1cyy8">
                               <svg
@@ -2451,7 +2451,7 @@
                             aria-describedby="HOST_RECOGNITION_ACHIEVEMENTSSMS-row-subtitle"
                             role="switch"
                             type="button"
-                            class="_1hzx1vsg"
+                            class="form__switch"
                           >
                             <div class="_vr1ztso"></div>
                           </button>
@@ -2481,7 +2481,7 @@
                             aria-describedby="HOST_RECOGNITION_ACHIEVEMENTSVOICE-row-subtitle"
                             role="switch"
                             type="button"
-                            class="_1hzx1vsg"
+                            class="form__switch"
                           >
                             <div class="_vr1ztso"></div>
                           </button>
@@ -2511,7 +2511,7 @@
                             aria-describedby="HOST_RECOGNITION_ACHIEVEMENTSWEB_PUSH-row-subtitle"
                             role="switch"
                             type="button"
-                            class="_1hzx1vsg"
+                            class="form__switch"
                           >
                             <div class="_vr1ztso"></div>
                           </button>
