--- a/become-a-host/legal.html
+++ b/become-a-host/legal.html
@@ -290,7 +290,7 @@
                                           name="WEAPONS"
                                           aria-labelledby="WEAPONS-row-title"
                                           id="WEAPONS-row-checkbox"
-                                          class="_1yf4i4f" /><span
+                                          class="form__check-input" /><span
                                           class="_41yoza"
                                           data-checkbox="true"
                                         ></span
@@ -331,7 +331,7 @@
                                           name="ANIMALS"
                                           aria-labelledby="ANIMALS-row-title"
                                           id="ANIMALS-row-checkbox"
-                                          class="_1yf4i4f" /><span
+                                          class="form__check-input" /><span
                                           class="_41yoza"
                                           data-checkbox="true"
                                         ></span
