--- a/edit/GuestReq.html
+++ b/edit/GuestReq.html
@@ -535,7 +535,7 @@
                                                     ><input
                                                       aria-labelledby="underTwo-row-title"
                                                       id="underTwo-row-checkbox"
-                                                      class="_1yf4i4f"
+                                                      class="form__check-input"
                                                       type="checkbox" /><span
                                                       class="_41yoza"
                                                       data-checkbox="true"
@@ -617,7 +617,7 @@
                                                       aria-labelledby="Tag:4804-row-title"
                                                       aria-describedby="Tag:4804-row-subtitle"
                                                       id="Tag:4804-row-checkbox"
-                                                      class="_1yf4i4f"
+                                                      class="form__check-input"
                                                       type="checkbox" /><span
                                                       class="_41yoza"
                                                       data-checkbox="true"
@@ -665,7 +665,7 @@
                                                       aria-labelledby="Tag:4802-row-title"
                                                       aria-describedby="Tag:4802-row-subtitle"
                                                       id="Tag:4802-row-checkbox"
-                                                      class="_1yf4i4f"
+                                                      class="form__check-input"
                                                       type="checkbox" /><span
                                                       class="_41yoza"
                                                       data-checkbox="true"
@@ -712,7 +712,7 @@
                                                       aria-labelledby="Tag:4805-row-title"
                                                       aria-describedby="Tag:4805-row-subtitle"
                                                       id="Tag:4805-row-checkbox"
-                                                      class="_1yf4i4f"
+                                                      class="form__check-input"
                                                       type="checkbox" /><span
                                                       class="_41yoza"
                                                       data-checkbox="true"
@@ -1000,7 +1000,7 @@ Guests should know how to fry food and also bring boiled eggs.</textarea
                                                     ><input
                                                       aria-labelledby="requireIdVerification-row-title"
                                                       id="requireIdVerification-row-checkbox"
-                                                      class="_1yf4i4f"
+                                                      class="form__check-input"
                                                       type="checkbox" /><span
                                                       class="_41yoza"
                                                       data-checkbox="true"
