--- a/homepage.html
+++ b/homepage.html
@@ -17935,7 +17935,7 @@
                                                         name="Entire place"
                                                         aria-describedby="filterItem-5270712849037773927-checkbox-room_types-Entire_home_apt-row-subtitle"
                                                         id="filterItem-5270712849037773927-checkbox-room_types-Entire_home_apt-row-checkbox"
-                                                        class="_1yf4i4f"
+                                                        class="form__check-input"
                                                         type="checkbox" /><span
                                                         class="_41yoza"
                                                         data-checkbox="true"
@@ -17985,7 +17985,7 @@
                                                         name="Private room"
                                                         aria-describedby="filterItem-5270712849037773927-checkbox-room_types-Private_room-row-subtitle"
                                                         id="filterItem-5270712849037773927-checkbox-room_types-Private_room-row-checkbox"
-                                                        class="_1yf4i4f"
+                                                        class="form__check-input"
                                                         type="checkbox" /><span
                                                         class="_41yoza"
                                                         data-checkbox="true"
@@ -18037,7 +18037,7 @@
                                                         name="Shared room"
                                                         aria-describedby="filterItem-5270712849037773927-checkbox-room_types-Shared_room-row-subtitle"
                                                         id="filterItem-5270712849037773927-checkbox-room_types-Shared_room-row-checkbox"
-                                                        class="_1yf4i4f"
+                                                        class="form__check-input"
                                                         type="checkbox" /><span
                                                         class="_41yoza"
                                                         data-checkbox="true"
@@ -19264,7 +19264,7 @@
                                                         ><input
                                                           name="Wifi"
                                                           id="filterItem-5974733398519785839-checkbox-amenities-4-row-checkbox"
-                                                          class="_1yf4i4f"
+                                                          class="form__check-input"
                                                           type="checkbox" /><span
                                                           class="_41yoza"
                                                           data-checkbox="true"
@@ -19307,7 +19307,7 @@
                                                         ><input
                                                           name="Kitchen"
                                                           id="filterItem-5974733398519785839-checkbox-amenities-8-row-checkbox"
-                                                          class="_1yf4i4f"
+                                                          class="form__check-input"
                                                           type="checkbox" /><span
                                                           class="_41yoza"
                                                           data-checkbox="true"
@@ -19350,7 +19350,7 @@
                                                         ><input
                                                           name="Washer"
                                                           id="filterItem-5974733398519785839-checkbox-amenities-33-row-checkbox"
-                                                          class="_1yf4i4f"
+                                                          class="form__check-input"
                                                           type="checkbox" /><span
                                                           class="_41yoza"
                                                           data-checkbox="true"
@@ -19393,7 +19393,7 @@
                                                         ><input
                                                           name="Dryer"
                                                           id="filterItem-5974733398519785839-checkbox-amenities-34-row-checkbox"
-                                                          class="_1yf4i4f"
+                                                          class="form__check-input"
                                                           type="checkbox" /><span
                                                           class="_41yoza"
                                                           data-checkbox="true"
@@ -19436,7 +19436,7 @@
                                                         ><input
                                                           name="Air conditioning"
                                                           id="filterItem-5974733398519785839-checkbox-amenities-5-row-checkbox"
-                                                          class="_1yf4i4f"
+                                                          class="form__check-input"
                                                           type="checkbox" /><span
                                                           class="_41yoza"
                                                           data-checkbox="true"
@@ -19479,7 +19479,7 @@
                                                         ><input
                                                           name="Heating"
                                                           id="filterItem-5974733398519785839-checkbox-amenities-30-row-checkbox"
-                                                          class="_1yf4i4f"
+                                                          class="form__check-input"
                                                           type="checkbox" /><span
                                                           class="_41yoza"
                                                           data-checkbox="true"
@@ -19582,7 +19582,7 @@
                                                 id="filterItem-4500419589442338630-switch-ib-true"
                                                 role="switch"
                                                 type="button"
-                                                class="_1hzx1vsg"
+                                                class="form__switch"
                                               >
                                                 <div class="_vr1ztso"></div>
                                               </button>
@@ -19618,7 +19618,7 @@
                                                 id="filterItem-4500419589442338630-switch-amenities-51"
                                                 role="switch"
                                                 type="button"
-                                                class="_1hzx1vsg"
+                                                class="form__switch"
                                               >
                                                 <div class="_vr1ztso"></div>
                                               </button>
@@ -19705,7 +19705,7 @@
                                                         ><input
                                                           name="Step-free guest entrance"
                                                           id="filterItem--8436613862514073199-checkbox-amenities-110-row-checkbox"
-                                                          class="_1yf4i4f"
+                                                          class="form__check-input"
                                                           type="checkbox" /><span
                                                           class="_41yoza"
                                                           data-checkbox="true"
@@ -19748,7 +19748,7 @@
                                                         ><input
                                                           name="Guest entrance wider than 32 inches"
                                                           id="filterItem--8436613862514073199-checkbox-amenities-111-row-checkbox"
-                                                          class="_1yf4i4f"
+                                                          class="form__check-input"
                                                           type="checkbox" /><span
                                                           class="_41yoza"
                                                           data-checkbox="true"
@@ -19792,7 +19792,7 @@
                                                         ><input
                                                           name="Accessible parking spot"
                                                           id="filterItem--8436613862514073199-checkbox-amenities-114-row-checkbox"
-                                                          class="_1yf4i4f"
+                                                          class="form__check-input"
                                                           type="checkbox" /><span
                                                           class="_41yoza"
                                                           data-checkbox="true"
@@ -19835,7 +19835,7 @@
                                                         ><input
                                                           name="Step-free path to the guest entrance"
                                                           id="filterItem--8436613862514073199-checkbox-amenities-112-row-checkbox"
-                                                          class="_1yf4i4f"
+                                                          class="form__check-input"
                                                           type="checkbox" /><span
                                                           class="_41yoza"
                                                           data-checkbox="true"
@@ -19946,7 +19946,7 @@
                                                 id="filterItem-4130986336275961253-switch-superhost-true"
                                                 role="switch"
                                                 type="button"
-                                                class="_1hzx1vsg"
+                                                class="form__switch"
                                               >
                                                 <div class="_vr1ztso"></div>
                                               </button>
@@ -19982,7 +19982,7 @@
                                                 id="filterItem-4130986336275961253-switch-tier_ids-1"
                                                 role="switch"
                                                 type="button"
-                                                class="_1hzx1vsg"
+                                                class="form__switch"
                                               >
                                                 <div class="_vr1ztso"></div>
                                               </button>
@@ -20052,7 +20052,7 @@
                                                         ><input
                                                           name="English"
                                                           id="filterItem-7277503327663178594-checkbox-languages-1-row-checkbox"
-                                                          class="_1yf4i4f"
+                                                          class="form__check-input"
                                                           type="checkbox" /><span
                                                           class="_41yoza"
                                                           data-checkbox="true"
@@ -20095,7 +20095,7 @@
                                                         ><input
                                                           name="French"
                                                           id="filterItem-7277503327663178594-checkbox-languages-2-row-checkbox"
-                                                          class="_1yf4i4f"
+                                                          class="form__check-input"
                                                           type="checkbox" /><span
                                                           class="_41yoza"
                                                           data-checkbox="true"
@@ -20138,7 +20138,7 @@
                                                         ><input
                                                           name="German"
                                                           id="filterItem-7277503327663178594-checkbox-languages-4-row-checkbox"
-                                                          class="_1yf4i4f"
+                                                          class="form__check-input"
                                                           type="checkbox" /><span
                                                           class="_41yoza"
                                                           data-checkbox="true"
@@ -20181,7 +20181,7 @@
                                                         ><input
                                                           name="Japanese"
                                                           id="filterItem-7277503327663178594-checkbox-languages-8-row-checkbox"
-                                                          class="_1yf4i4f"
+                                                          class="form__check-input"
                                                           type="checkbox" /><span
                                                           class="_41yoza"
                                                           data-checkbox="true"
