--- a/payments/guest-contributions.html
+++ b/payments/guest-contributions.html
@@ -308,7 +308,7 @@
                                                 aria-checked="true"
                                                 aria-labelledby="contributions-opt-out--label"
                                                 type="button"
-                                                class="_17y21tl"
+                                                class="form__switch-secondary"
                                               >
                                                 <input
                                                   type="hidden"
@@ -897,7 +897,7 @@
                                                       aria-checked="true"
                                                       aria-labelledby="contributions-opt-out--label"
                                                       type="button"
-                                                      class="_17y21tl"
+                                                      class="form__switch-secondary"
                                                     >
                                                       <input
                                                         type="hidden"
