--- a/preferences.html
+++ b/preferences.html
@@ -599,7 +599,7 @@
                                         aria-checked="true"
                                         aria-labelledby="auto_translate_switch"
                                         type="button"
-                                        class="_17y21tl"
+                                        class="form__switch-secondary"
                                       >
                                         <input
                                           type="hidden"
@@ -684,7 +684,7 @@
                                         aria-checked="false"
                                         aria-labelledby="auto_translate_switch"
                                         type="button"
-                                        class="_17y21tl"
+                                        class="form__switch-secondary"
                                       >
                                         <input
                                           type="hidden"
