--- a/privacy-and-sharing.html
+++ b/privacy-and-sharing.html
@@ -548,7 +548,7 @@
                                                           aria-describedby="includeInSearchEngines-switch-row-subtitle"
                                                           role="switch"
                                                           type="button"
-                                                          class="_1hzx1vsg"
+                                                          class="form__switch"
                                                         >
                                                           <input
                                                             type="hidden"
@@ -631,7 +631,7 @@
                                                           aria-describedby="useDataForInclusion-switch-row-subtitle"
                                                           role="switch"
                                                           type="button"
-                                                          class="_1x8lx0do"
+                                                          class="form__switch--checked"
                                                         >
                                                           <input
                                                             type="hidden"
@@ -1210,7 +1210,7 @@
                                                   aria-describedby="includeInSearchEngines-switch-row-subtitle"
                                                   role="switch"
                                                   type="button"
-                                                  class="_1hzx1vsg"
+                                                  class="form__switch"
                                                 >
                                                   <input
                                                     type="hidden"
@@ -1288,7 +1288,7 @@
                                                   aria-describedby="useDataForInclusion-switch-row-subtitle"
                                                   role="switch"
                                                   type="button"
-                                                  class="_1x8lx0do"
+                                                  class="form__switch--checked"
                                                 >
                                                   <input
                                                     type="hidden"
