--- a/signup_login.html
+++ b/signup_login.html
@@ -2955,7 +2955,7 @@
                                             ><input
                                               id="email-signupuser_profile_info[receive_promotional_email]"
                                               name="email-signupuser_profile_info[receive_promotional_email]"
-                                              class="_1yf4i4f"
+                                              class="form__check-input"
                                               type="checkbox"
                                               value="1" /><span
                                               class="_41yoza"
@@ -5980,7 +5980,7 @@
                                           ><input
                                             id="email-signupuser_profile_info[receive_promotional_email]"
                                             name="email-signupuser_profile_info[receive_promotional_email]"
-                                            class="_1yf4i4f"
+                                            class="form__check-input"
                                             type="checkbox"
                                             value="1" /><span
                                             class="_41yoza"
