--- a/submission/GuestP.html
+++ b/submission/GuestP.html
@@ -1369,7 +1369,7 @@
                                     aria-describedby="default-private-row-subtitle"
                                     role="switch"
                                     type="button"
-                                    class="_1hzx1vsg"
+                                    class="form__switch"
                                   >
                                     <div class="_vr1ztso"></div>
                                   </button>
@@ -1422,7 +1422,7 @@
                                     aria-describedby="caregiver-free-row-subtitle"
                                     role="switch"
                                     type="button"
-                                    class="_1hzx1vsg"
+                                    class="form__switch"
                                   >
                                     <div class="_vr1ztso"></div>
                                   </button>
