--- a/submission/basic.html
+++ b/submission/basic.html
@@ -1635,7 +1635,7 @@
                       data-testid="additional-language-ar"
                       id="checkbox-ar"
                       name="ar"
-                      class="_1yf4i4f"
+                      class="form__check-input"
                       type="checkbox" /><span
                       class="_41yoza"
                       data-checkbox="true"
@@ -1653,7 +1653,7 @@
                       data-testid="additional-language-az"
                       id="checkbox-az"
                       name="az"
-                      class="_1yf4i4f"
+                      class="form__check-input"
                       type="checkbox" /><span
                       class="_41yoza"
                       data-checkbox="true"
@@ -1671,7 +1671,7 @@
                       data-testid="additional-language-bg"
                       id="checkbox-bg"
                       name="bg"
-                      class="_1yf4i4f"
+                      class="form__check-input"
                       type="checkbox" /><span
                       class="_41yoza"
                       data-checkbox="true"
@@ -1689,7 +1689,7 @@
                       data-testid="additional-language-bs"
                       id="checkbox-bs"
                       name="bs"
-                      class="_1yf4i4f"
+                      class="form__check-input"
                       type="checkbox" /><span
                       class="_41yoza"
                       data-checkbox="true"
@@ -1707,7 +1707,7 @@
                       data-testid="additional-language-ca"
                       id="checkbox-ca"
                       name="ca"
-                      class="_1yf4i4f"
+                      class="form__check-input"
                       type="checkbox" /><span
                       class="_41yoza"
                       data-checkbox="true"
@@ -1725,7 +1725,7 @@
                       data-testid="additional-language-cs"
                       id="checkbox-cs"
                       name="cs"
-                      class="_1yf4i4f"
+                      class="form__check-input"
                       type="checkbox" /><span
                       class="_41yoza"
                       data-checkbox="true"
@@ -1743,7 +1743,7 @@
                       data-testid="additional-language-da"
                       id="checkbox-da"
                       name="da"
-                      class="_1yf4i4f"
+                      class="form__check-input"
                       type="checkbox" /><span
                       class="_41yoza"
                       data-checkbox="true"
@@ -1761,7 +1761,7 @@
                       data-testid="additional-language-de"
                       id="checkbox-de"
                       name="de"
-                      class="_1yf4i4f"
+                      class="form__check-input"
                       type="checkbox" /><span
                       class="_41yoza"
                       data-checkbox="true"
@@ -1779,7 +1779,7 @@
                       data-testid="additional-language-el"
                       id="checkbox-el"
                       name="el"
-                      class="_1yf4i4f"
+                      class="form__check-input"
                       type="checkbox" /><span
                       class="_41yoza"
                       data-checkbox="true"
@@ -1835,7 +1835,7 @@
                       data-testid="additional-language-es"
                       id="checkbox-es"
                       name="es"
-                      class="_1yf4i4f"
+                      class="form__check-input"
                       type="checkbox" /><span
                       class="_41yoza"
                       data-checkbox="true"
@@ -1853,7 +1853,7 @@
                       data-testid="additional-language-et"
                       id="checkbox-et"
                       name="et"
-                      class="_1yf4i4f"
+                      class="form__check-input"
                       type="checkbox" /><span
                       class="_41yoza"
                       data-checkbox="true"
@@ -1871,7 +1871,7 @@
                       data-testid="additional-language-fi"
                       id="checkbox-fi"
                       name="fi"
-                      class="_1yf4i4f"
+                      class="form__check-input"
                       type="checkbox" /><span
                       class="_41yoza"
                       data-checkbox="true"
@@ -1889,7 +1889,7 @@
                       data-testid="additional-language-fr"
                       id="checkbox-fr"
                       name="fr"
-                      class="_1yf4i4f"
+                      class="form__check-input"
                       type="checkbox" /><span
                       class="_41yoza"
                       data-checkbox="true"
@@ -1907,7 +1907,7 @@
                       data-testid="additional-language-ga"
                       id="checkbox-ga"
                       name="ga"
-                      class="_1yf4i4f"
+                      class="form__check-input"
                       type="checkbox" /><span
                       class="_41yoza"
                       data-checkbox="true"
@@ -1925,7 +1925,7 @@
                       data-testid="additional-language-he"
                       id="checkbox-he"
                       name="he"
-                      class="_1yf4i4f"
+                      class="form__check-input"
                       type="checkbox" /><span
                       class="_41yoza"
                       data-checkbox="true"
@@ -1943,7 +1943,7 @@
                       data-testid="additional-language-hi"
                       id="checkbox-hi"
                       name="hi"
-                      class="_1yf4i4f"
+                      class="form__check-input"
                       type="checkbox" /><span
                       class="_41yoza"
                       data-checkbox="true"
@@ -1961,7 +1961,7 @@
                       data-testid="additional-language-hr"
                       id="checkbox-hr"
                       name="hr"
-                      class="_1yf4i4f"
+                      class="form__check-input"
                       type="checkbox" /><span
                       class="_41yoza"
                       data-checkbox="true"
@@ -1979,7 +1979,7 @@
                       data-testid="additional-language-hu"
                       id="checkbox-hu"
                       name="hu"
-                      class="_1yf4i4f"
+                      class="form__check-input"
                       type="checkbox" /><span
                       class="_41yoza"
                       data-checkbox="true"
@@ -1997,7 +1997,7 @@
                       data-testid="additional-language-hy"
                       id="checkbox-hy"
                       name="hy"
-                      class="_1yf4i4f"
+                      class="form__check-input"
                       type="checkbox" /><span
                       class="_41yoza"
                       data-checkbox="true"
@@ -2015,7 +2015,7 @@
                       data-testid="additional-language-id"
                       id="checkbox-id"
                       name="id"
-                      class="_1yf4i4f"
+                      class="form__check-input"
                       type="checkbox" /><span
                       class="_41yoza"
                       data-checkbox="true"
@@ -2033,7 +2033,7 @@
                       data-testid="additional-language-is"
                       id="checkbox-is"
                       name="is"
-                      class="_1yf4i4f"
+                      class="form__check-input"
                       type="checkbox" /><span
                       class="_41yoza"
                       data-checkbox="true"
@@ -2051,7 +2051,7 @@
                       data-testid="additional-language-it"
                       id="checkbox-it"
                       name="it"
-                      class="_1yf4i4f"
+                      class="form__check-input"
                       type="checkbox" /><span
                       class="_41yoza"
                       data-checkbox="true"
@@ -2069,7 +2069,7 @@
                       data-testid="additional-language-ja"
                       id="checkbox-ja"
                       name="ja"
-                      class="_1yf4i4f"
+                      class="form__check-input"
                       type="checkbox" /><span
                       class="_41yoza"
                       data-checkbox="true"
@@ -2087,7 +2087,7 @@
                       data-testid="additional-language-ka"
                       id="checkbox-ka"
                       name="ka"
-                      class="_1yf4i4f"
+                      class="form__check-input"
                       type="checkbox" /><span
                       class="_41yoza"
                       data-checkbox="true"
@@ -2105,7 +2105,7 @@
                       data-testid="additional-language-ko"
                       id="checkbox-ko"
                       name="ko"
-                      class="_1yf4i4f"
+                      class="form__check-input"
                       type="checkbox" /><span
                       class="_41yoza"
                       data-checkbox="true"
@@ -2123,7 +2123,7 @@
                       data-testid="additional-language-lt"
                       id="checkbox-lt"
                       name="lt"
-                      class="_1yf4i4f"
+                      class="form__check-input"
                       type="checkbox" /><span
                       class="_41yoza"
                       data-checkbox="true"
@@ -2141,7 +2141,7 @@
                       data-testid="additional-language-lv"
                       id="checkbox-lv"
                       name="lv"
-                      class="_1yf4i4f"
+                      class="form__check-input"
                       type="checkbox" /><span
                       class="_41yoza"
                       data-checkbox="true"
@@ -2159,7 +2159,7 @@
                       data-testid="additional-language-mk"
                       id="checkbox-mk"
                       name="mk"
-                      class="_1yf4i4f"
+                      class="form__check-input"
                       type="checkbox" /><span
                       class="_41yoza"
                       data-checkbox="true"
@@ -2177,7 +2177,7 @@
                       data-testid="additional-language-ms"
                       id="checkbox-ms"
                       name="ms"
-                      class="_1yf4i4f"
+                      class="form__check-input"
                       type="checkbox" /><span
                       class="_41yoza"
                       data-checkbox="true"
@@ -2195,7 +2195,7 @@
                       data-testid="additional-language-mt"
                       id="checkbox-mt"
                       name="mt"
-                      class="_1yf4i4f"
+                      class="form__check-input"
                       type="checkbox" /><span
                       class="_41yoza"
                       data-checkbox="true"
@@ -2213,7 +2213,7 @@
                       data-testid="additional-language-nl"
                       id="checkbox-nl"
                       name="nl"
-                      class="_1yf4i4f"
+                      class="form__check-input"
                       type="checkbox" /><span
                       class="_41yoza"
                       data-checkbox="true"
@@ -2231,7 +2231,7 @@
                       data-testid="additional-language-no"
                       id="checkbox-no"
                       name="no"
-                      class="_1yf4i4f"
+                      class="form__check-input"
                       type="checkbox" /><span
                       class="_41yoza"
                       data-checkbox="true"
@@ -2249,7 +2249,7 @@
                       data-testid="additional-language-pl"
                       id="checkbox-pl"
                       name="pl"
-                      class="_1yf4i4f"
+                      class="form__check-input"
                       type="checkbox" /><span
                       class="_41yoza"
                       data-checkbox="true"
@@ -2267,7 +2267,7 @@
                       data-testid="additional-language-pt"
                       id="checkbox-pt"
                       name="pt"
-                      class="_1yf4i4f"
+                      class="form__check-input"
                       type="checkbox" /><span
                       class="_41yoza"
                       data-checkbox="true"
@@ -2285,7 +2285,7 @@
                       data-testid="additional-language-ro"
                       id="checkbox-ro"
                       name="ro"
-                      class="_1yf4i4f"
+                      class="form__check-input"
                       type="checkbox" /><span
                       class="_41yoza"
                       data-checkbox="true"
@@ -2303,7 +2303,7 @@
                       data-testid="additional-language-ru"
                       id="checkbox-ru"
                       name="ru"
-                      class="_1yf4i4f"
+                      class="form__check-input"
                       type="checkbox" /><span
                       class="_41yoza"
                       data-checkbox="true"
@@ -2321,7 +2321,7 @@
                       data-testid="additional-language-sk"
                       id="checkbox-sk"
                       name="sk"
-                      class="_1yf4i4f"
+                      class="form__check-input"
                       type="checkbox" /><span
                       class="_41yoza"
                       data-checkbox="true"
@@ -2339,7 +2339,7 @@
                       data-testid="additional-language-sl"
                       id="checkbox-sl"
                       name="sl"
-                      class="_1yf4i4f"
+                      class="form__check-input"
                       type="checkbox" /><span
                       class="_41yoza"
                       data-checkbox="true"
@@ -2357,7 +2357,7 @@
                       data-testid="additional-language-sq"
                       id="checkbox-sq"
                       name="sq"
-                      class="_1yf4i4f"
+                      class="form__check-input"
                       type="checkbox" /><span
                       class="_41yoza"
                       data-checkbox="true"
@@ -2375,7 +2375,7 @@
                       data-testid="additional-language-sr"
                       id="checkbox-sr"
                       name="sr"
-                      class="_1yf4i4f"
+                      class="form__check-input"
                       type="checkbox" /><span
                       class="_41yoza"
                       data-checkbox="true"
@@ -2393,7 +2393,7 @@
                       data-testid="additional-language-sv"
                       id="checkbox-sv"
                       name="sv"
-                      class="_1yf4i4f"
+                      class="form__check-input"
                       type="checkbox" /><span
                       class="_41yoza"
                       data-checkbox="true"
@@ -2411,7 +2411,7 @@
                       data-testid="additional-language-sw"
                       id="checkbox-sw"
                       name="sw"
-                      class="_1yf4i4f"
+                      class="form__check-input"
                       type="checkbox" /><span
                       class="_41yoza"
                       data-checkbox="true"
@@ -2429,7 +2429,7 @@
                       data-testid="additional-language-th"
                       id="checkbox-th"
                       name="th"
-                      class="_1yf4i4f"
+                      class="form__check-input"
                       type="checkbox" /><span
                       class="_41yoza"
                       data-checkbox="true"
@@ -2447,7 +2447,7 @@
                       data-testid="additional-language-tl"
                       id="checkbox-tl"
                       name="tl"
-                      class="_1yf4i4f"
+                      class="form__check-input"
                       type="checkbox" /><span
                       class="_41yoza"
                       data-checkbox="true"
@@ -2465,7 +2465,7 @@
                       data-testid="additional-language-tr"
                       id="checkbox-tr"
                       name="tr"
-                      class="_1yf4i4f"
+                      class="form__check-input"
                       type="checkbox" /><span
                       class="_41yoza"
                       data-checkbox="true"
@@ -2483,7 +2483,7 @@
                       data-testid="additional-language-uk"
                       id="checkbox-uk"
                       name="uk"
-                      class="_1yf4i4f"
+                      class="form__check-input"
                       type="checkbox" /><span
                       class="_41yoza"
                       data-checkbox="true"
@@ -2501,7 +2501,7 @@
                       data-testid="additional-language-vi"
                       id="checkbox-vi"
                       name="vi"
-                      class="_1yf4i4f"
+                      class="form__check-input"
                       type="checkbox" /><span
                       class="_41yoza"
                       data-checkbox="true"
@@ -2519,7 +2519,7 @@
                       data-testid="additional-language-xh"
                       id="checkbox-xh"
                       name="xh"
-                      class="_1yf4i4f"
+                      class="form__check-input"
                       type="checkbox" /><span
                       class="_41yoza"
                       data-checkbox="true"
@@ -2537,7 +2537,7 @@
                       data-testid="additional-language-zh"
                       id="checkbox-zh"
                       name="zh"
-                      class="_1yf4i4f"
+                      class="form__check-input"
                       type="checkbox" /><span
                       class="_41yoza"
                       data-checkbox="true"
@@ -2555,7 +2555,7 @@
                       data-testid="additional-language-zh-TW"
                       id="checkbox-zh-TW"
                       name="zh-TW"
-                      class="_1yf4i4f"
+                      class="form__check-input"
                       type="checkbox" /><span
                       class="_41yoza"
                       data-checkbox="true"
@@ -2573,7 +2573,7 @@
                       data-testid="additional-language-zu"
                       id="checkbox-zu"
                       name="zu"
-                      class="_1yf4i4f"
+                      class="form__check-input"
                       type="checkbox" /><span
                       class="_41yoza"
                       data-checkbox="true"
