--- a/submission/guestReq.html
+++ b/submission/guestReq.html
@@ -1160,7 +1160,7 @@
                                           ><input
                                             aria-labelledby="guest_requirements_infant_can_attend-row-title"
                                             id="guest_requirements_infant_can_attend-row-checkbox"
-                                            class="_1yf4i4f"
+                                            class="form__check-input"
                                             type="checkbox" /><span
                                             class="_41yoza"
                                             data-checkbox="true"
@@ -1214,7 +1214,7 @@
                                                   aria-labelledby="Tag:4804-row-title"
                                                   aria-describedby="Tag:4804-row-subtitle"
                                                   id="Tag:4804-row-checkbox"
-                                                  class="_1yf4i4f"
+                                                  class="form__check-input"
                                                   aria-invalid="false"
                                                   type="checkbox" /><span
                                                   class="_41yoza"
@@ -1261,7 +1261,7 @@
                                                   aria-labelledby="Tag:4802-row-title"
                                                   aria-describedby="Tag:4802-row-subtitle"
                                                   id="Tag:4802-row-checkbox"
-                                                  class="_1yf4i4f"
+                                                  class="form__check-input"
                                                   aria-invalid="false"
                                                   type="checkbox" /><span
                                                   class="_41yoza"
@@ -1297,7 +1297,7 @@
                                                 ><input
                                                   aria-labelledby="Tag:4805-row-title"
                                                   id="Tag:4805-row-checkbox"
-                                                  class="_1yf4i4f"
+                                                  class="form__check-input"
                                                   aria-invalid="false"
                                                   type="checkbox" /><span
                                                   class="_41yoza"
