--- a/submission/review.html
+++ b/submission/review.html
@@ -1320,7 +1320,7 @@
                                         name="info_is_compliant_with_all_laws"
                                         aria-labelledby="info_is_compliant_with_all_laws-row-title"
                                         id="info_is_compliant_with_all_laws-row-checkbox"
-                                        class="_1yf4i4f"
+                                        class="form__check-input"
                                         aria-invalid="false"
                                         type="checkbox" /><span
                                         class="_41yoza"
@@ -1386,7 +1386,7 @@
                                         name="info_is_compliant_with_airbnb_policies"
                                         aria-labelledby="info_is_compliant_with_airbnb_policies-row-title"
                                         id="info_is_compliant_with_airbnb_policies-row-checkbox"
-                                        class="_1yf4i4f"
+                                        class="form__check-input"
                                         aria-invalid="false"
                                         type="checkbox" /><span
                                         class="_41yoza"
