--- a/basics.html
+++ b/basics.html
@@ -1216,7 +1216,7 @@
                       data-testid="additional-language-ar"
                       id="checkbox-ar"
                       name="ar"
-                      class="_1yf4i4f"
+                      class="form__check-input"
                       type="checkbox" /><span
                       class="_41yoza"
                       data-checkbox="true"
@@ -1234,7 +1234,7 @@
                       data-testid="additional-language-az"
                       id="checkbox-az"
                       name="az"
-                      class="_1yf4i4f"
+                      class="form__check-input"
                       type="checkbox" /><span
                       class="_41yoza"
                       data-checkbox="true"
@@ -1252,7 +1252,7 @@
                       data-testid="additional-language-bg"
                       id="checkbox-bg"
                       name="bg"
-                      class="_1yf4i4f"
+                      class="form__check-input"
                       type="checkbox" /><span
                       class="_41yoza"
                       data-checkbox="true"
@@ -1270,7 +1270,7 @@
                       data-testid="additional-language-bs"
                       id="checkbox-bs"
                       name="bs"
-                      class="_1yf4i4f"
+                      class="form__check-input"
                       type="checkbox" /><span
                       class="_41yoza"
                       data-checkbox="true"
@@ -1288,7 +1288,7 @@
                       data-testid="additional-language-ca"
                       id="checkbox-ca"
                       name="ca"
-                      class="_1yf4i4f"
+                      class="form__check-input"
                       type="checkbox" /><span
                       class="_41yoza"
                       data-checkbox="true"
@@ -1306,7 +1306,7 @@
                       data-testid="additional-language-cs"
                       id="checkbox-cs"
                       name="cs"
-                      class="_1yf4i4f"
+                      class="form__check-input"
                       type="checkbox" /><span
                       class="_41yoza"
                       data-checkbox="true"
@@ -1324,7 +1324,7 @@
                       data-testid="additional-language-da"
                       id="checkbox-da"
                       name="da"
-                      class="_1yf4i4f"
+                      class="form__check-input"
                       type="checkbox" /><span
                       class="_41yoza"
                       data-checkbox="true"
@@ -1342,7 +1342,7 @@
                       data-testid="additional-language-de"
                       id="checkbox-de"
                       name="de"
-                      class="_1yf4i4f"
+                      class="form__check-input"
                       type="checkbox" /><span
                       class="_41yoza"
                       data-checkbox="true"
@@ -1360,7 +1360,7 @@
                       data-testid="additional-language-el"
                       id="checkbox-el"
                       name="el"
-                      class="_1yf4i4f"
+                      class="form__check-input"
                       type="checkbox" /><span
                       class="_41yoza"
                       data-checkbox="true"
@@ -1416,7 +1416,7 @@
                       data-testid="additional-language-es"
                       id="checkbox-es"
                       name="es"
-                      class="_1yf4i4f"
+                      class="form__check-input"
                       type="checkbox" /><span
                       class="_41yoza"
                       data-checkbox="true"
@@ -1434,7 +1434,7 @@
                       data-testid="additional-language-et"
                       id="checkbox-et"
                       name="et"
-                      class="_1yf4i4f"
+                      class="form__check-input"
                       type="checkbox" /><span
                       class="_41yoza"
                       data-checkbox="true"
@@ -1452,7 +1452,7 @@
                       data-testid="additional-language-fi"
                       id="checkbox-fi"
                       name="fi"
-                      class="_1yf4i4f"
+                      class="form__check-input"
                       type="checkbox" /><span
                       class="_41yoza"
                       data-checkbox="true"
@@ -1470,7 +1470,7 @@
                       data-testid="additional-language-fr"
                       id="checkbox-fr"
                       name="fr"
-                      class="_1yf4i4f"
+                      class="form__check-input"
                       type="checkbox" /><span
                       class="_41yoza"
                       data-checkbox="true"
@@ -1488,7 +1488,7 @@
                       data-testid="additional-language-ga"
                       id="checkbox-ga"
                       name="ga"
-                      class="_1yf4i4f"
+                      class="form__check-input"
                       type="checkbox" /><span
                       class="_41yoza"
                       data-checkbox="true"
@@ -1506,7 +1506,7 @@
                       data-testid="additional-language-he"
                       id="checkbox-he"
                       name="he"
-                      class="_1yf4i4f"
+                      class="form__check-input"
                       type="checkbox" /><span
                       class="_41yoza"
                       data-checkbox="true"
@@ -1524,7 +1524,7 @@
                       data-testid="additional-language-hi"
                       id="checkbox-hi"
                       name="hi"
-                      class="_1yf4i4f"
+                      class="form__check-input"
                       type="checkbox" /><span
                       class="_41yoza"
                       data-checkbox="true"
@@ -1542,7 +1542,7 @@
                       data-testid="additional-language-hr"
                       id="checkbox-hr"
                       name="hr"
-                      class="_1yf4i4f"
+                      class="form__check-input"
                       type="checkbox" /><span
                       class="_41yoza"
                       data-checkbox="true"
@@ -1560,7 +1560,7 @@
                       data-testid="additional-language-hu"
                       id="checkbox-hu"
                       name="hu"
-                      class="_1yf4i4f"
+                      class="form__check-input"
                       type="checkbox" /><span
                       class="_41yoza"
                       data-checkbox="true"
@@ -1578,7 +1578,7 @@
                       data-testid="additional-language-hy"
                       id="checkbox-hy"
                       name="hy"
-                      class="_1yf4i4f"
+                      class="form__check-input"
                       type="checkbox" /><span
                       class="_41yoza"
                       data-checkbox="true"
@@ -1596,7 +1596,7 @@
                       data-testid="additional-language-id"
                       id="checkbox-id"
                       name="id"
-                      class="_1yf4i4f"
+                      class="form__check-input"
                       type="checkbox" /><span
                       class="_41yoza"
                       data-checkbox="true"
@@ -1614,7 +1614,7 @@
                       data-testid="additional-language-is"
                       id="checkbox-is"
                       name="is"
-                      class="_1yf4i4f"
+                      class="form__check-input"
                       type="checkbox" /><span
                       class="_41yoza"
                       data-checkbox="true"
@@ -1632,7 +1632,7 @@
                       data-testid="additional-language-it"
                       id="checkbox-it"
                       name="it"
-                      class="_1yf4i4f"
+                      class="form__check-input"
                       type="checkbox" /><span
                       class="_41yoza"
                       data-checkbox="true"
@@ -1650,7 +1650,7 @@
                       data-testid="additional-language-ja"
                       id="checkbox-ja"
                       name="ja"
-                      class="_1yf4i4f"
+                      class="form__check-input"
                       type="checkbox" /><span
                       class="_41yoza"
                       data-checkbox="true"
@@ -1668,7 +1668,7 @@
                       data-testid="additional-language-ka"
                       id="checkbox-ka"
                       name="ka"
-                      class="_1yf4i4f"
+                      class="form__check-input"
                       type="checkbox" /><span
                       class="_41yoza"
                       data-checkbox="true"
@@ -1686,7 +1686,7 @@
                       data-testid="additional-language-ko"
                       id="checkbox-ko"
                       name="ko"
-                      class="_1yf4i4f"
+                      class="form__check-input"
                       type="checkbox" /><span
                       class="_41yoza"
                       data-checkbox="true"
@@ -1704,7 +1704,7 @@
                       data-testid="additional-language-lt"
                       id="checkbox-lt"
                       name="lt"
-                      class="_1yf4i4f"
+                      class="form__check-input"
                       type="checkbox" /><span
                       class="_41yoza"
                       data-checkbox="true"
@@ -1722,7 +1722,7 @@
                       data-testid="additional-language-lv"
                       id="checkbox-lv"
                       name="lv"
-                      class="_1yf4i4f"
+                      class="form__check-input"
                       type="checkbox" /><span
                       class="_41yoza"
                       data-checkbox="true"
@@ -1740,7 +1740,7 @@
                       data-testid="additional-language-mk"
                       id="checkbox-mk"
                       name="mk"
-                      class="_1yf4i4f"
+                      class="form__check-input"
                       type="checkbox" /><span
                       class="_41yoza"
                       data-checkbox="true"
@@ -1758,7 +1758,7 @@
                       data-testid="additional-language-ms"
                       id="checkbox-ms"
                       name="ms"
-                      class="_1yf4i4f"
+                      class="form__check-input"
                       type="checkbox" /><span
                       class="_41yoza"
                       data-checkbox="true"
@@ -1776,7 +1776,7 @@
                       data-testid="additional-language-mt"
                       id="checkbox-mt"
                       name="mt"
-                      class="_1yf4i4f"
+                      class="form__check-input"
                       type="checkbox" /><span
                       class="_41yoza"
                       data-checkbox="true"
@@ -1794,7 +1794,7 @@
                       data-testid="additional-language-nl"
                       id="checkbox-nl"
                       name="nl"
-                      class="_1yf4i4f"
+                      class="form__check-input"
                       type="checkbox" /><span
                       class="_41yoza"
                       data-checkbox="true"
@@ -1812,7 +1812,7 @@
                       data-testid="additional-language-no"
                       id="checkbox-no"
                       name="no"
-                      class="_1yf4i4f"
+                      class="form__check-input"
                       type="checkbox" /><span
                       class="_41yoza"
                       data-checkbox="true"
@@ -1830,7 +1830,7 @@
                       data-testid="additional-language-pl"
                       id="checkbox-pl"
                       name="pl"
-                      class="_1yf4i4f"
+                      class="form__check-input"
                       type="checkbox" /><span
                       class="_41yoza"
                       data-checkbox="true"
@@ -1848,7 +1848,7 @@
                       data-testid="additional-language-pt"
                       id="checkbox-pt"
                       name="pt"
-                      class="_1yf4i4f"
+                      class="form__check-input"
                       type="checkbox" /><span
                       class="_41yoza"
                       data-checkbox="true"
@@ -1866,7 +1866,7 @@
                       data-testid="additional-language-ro"
                       id="checkbox-ro"
                       name="ro"
-                      class="_1yf4i4f"
+                      class="form__check-input"
                       type="checkbox" /><span
                       class="_41yoza"
                       data-checkbox="true"
@@ -1884,7 +1884,7 @@
                       data-testid="additional-language-ru"
                       id="checkbox-ru"
                       name="ru"
-                      class="_1yf4i4f"
+                      class="form__check-input"
                       type="checkbox" /><span
                       class="_41yoza"
                       data-checkbox="true"
@@ -1902,7 +1902,7 @@
                       data-testid="additional-language-sk"
                       id="checkbox-sk"
                       name="sk"
-                      class="_1yf4i4f"
+                      class="form__check-input"
                       type="checkbox" /><span
                       class="_41yoza"
                       data-checkbox="true"
@@ -1920,7 +1920,7 @@
                       data-testid="additional-language-sl"
                       id="checkbox-sl"
                       name="sl"
-                      class="_1yf4i4f"
+                      class="form__check-input"
                       type="checkbox" /><span
                       class="_41yoza"
                       data-checkbox="true"
@@ -1938,7 +1938,7 @@
                       data-testid="additional-language-sq"
                       id="checkbox-sq"
                       name="sq"
-                      class="_1yf4i4f"
+                      class="form__check-input"
                       type="checkbox" /><span
                       class="_41yoza"
                       data-checkbox="true"
@@ -1956,7 +1956,7 @@
                       data-testid="additional-language-sr"
                       id="checkbox-sr"
                       name="sr"
-                      class="_1yf4i4f"
+                      class="form__check-input"
                       type="checkbox" /><span
                       class="_41yoza"
                       data-checkbox="true"
@@ -1974,7 +1974,7 @@
                       data-testid="additional-language-sv"
                       id="checkbox-sv"
                       name="sv"
-                      class="_1yf4i4f"
+                      class="form__check-input"
                       type="checkbox" /><span
                       class="_41yoza"
                       data-checkbox="true"
@@ -1992,7 +1992,7 @@
                       data-testid="additional-language-sw"
                       id="checkbox-sw"
                       name="sw"
-                      class="_1yf4i4f"
+                      class="form__check-input"
                       type="checkbox" /><span
                       class="_41yoza"
                       data-checkbox="true"
@@ -2010,7 +2010,7 @@
                       data-testid="additional-language-th"
                       id="checkbox-th"
                       name="th"
-                      class="_1yf4i4f"
+                      class="form__check-input"
                       type="checkbox" /><span
                       class="_41yoza"
                       data-checkbox="true"
@@ -2028,7 +2028,7 @@
                       data-testid="additional-language-tl"
                       id="checkbox-tl"
                       name="tl"
-                      class="_1yf4i4f"
+                      class="form__check-input"
                       type="checkbox" /><span
                       class="_41yoza"
                       data-checkbox="true"
@@ -2046,7 +2046,7 @@
                       data-testid="additional-language-tr"
                       id="checkbox-tr"
                       name="tr"
-                      class="_1yf4i4f"
+                      class="form__check-input"
                       type="checkbox" /><span
                       class="_41yoza"
                       data-checkbox="true"
@@ -2064,7 +2064,7 @@
                       data-testid="additional-language-uk"
                       id="checkbox-uk"
                       name="uk"
-                      class="_1yf4i4f"
+                      class="form__check-input"
                       type="checkbox" /><span
                       class="_41yoza"
                       data-checkbox="true"
@@ -2082,7 +2082,7 @@
                       data-testid="additional-language-vi"
                       id="checkbox-vi"
                       name="vi"
-                      class="_1yf4i4f"
+                      class="form__check-input"
                       type="checkbox" /><span
                       class="_41yoza"
                       data-checkbox="true"
@@ -2100,7 +2100,7 @@
                       data-testid="additional-language-xh"
                       id="checkbox-xh"
                       name="xh"
-                      class="_1yf4i4f"
+                      class="form__check-input"
                       type="checkbox" /><span
                       class="_41yoza"
                       data-checkbox="true"
@@ -2118,7 +2118,7 @@
                       data-testid="additional-language-zh"
                       id="checkbox-zh"
                       name="zh"
-                      class="_1yf4i4f"
+                      class="form__check-input"
                       type="checkbox" /><span
                       class="_41yoza"
                       data-checkbox="true"
@@ -2136,7 +2136,7 @@
                       data-testid="additional-language-zh-TW"
                       id="checkbox-zh-TW"
                       name="zh-TW"
-                      class="_1yf4i4f"
+                      class="form__check-input"
                       type="checkbox" /><span
                       class="_41yoza"
                       data-checkbox="true"
@@ -2154,7 +2154,7 @@
                       data-testid="additional-language-zu"
                       id="checkbox-zu"
                       name="zu"
-                      class="_1yf4i4f"
+                      class="form__check-input"
                       type="checkbox" /><span
                       class="_41yoza"
                       data-checkbox="true"
