--- a/professional-hosting.html
+++ b/professional-hosting.html
@@ -363,7 +363,7 @@
                                         aria-labelledby="email_removal_whitelist_switch--label"
                                         aria-describedby="email_removal_whitelist_switch--subtitle"
                                         type="button"
-                                        class="_17y21tl"
+                                        class="form__switch-secondary"
                                       >
                                         <input
                                           type="hidden"
@@ -766,7 +766,7 @@
                                             aria-labelledby="email_removal_whitelist_switch--label"
                                             aria-describedby="email_removal_whitelist_switch--subtitle"
                                             type="button"
-                                            class="_17y21tl mb-1"
+                                            class="form__switch-secondary mb-1"
                                           >
                                             <input
                                               type="hidden"
@@ -835,7 +835,7 @@
                                             aria-labelledby="email_removal_whitelist_switch--label"
                                             aria-describedby="email_removal_whitelist_switch--subtitle"
                                             type="button"
-                                            class="_17y21tl"
+                                            class="form__switch-secondary"
                                           >
                                             <input
                                               type="hidden"
